--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <sub class="main-body">
         <img class="images" src="images/me.png" alt="">
         <div class="side-dom">
-            <button class="side-bar"> Hire Me</button>
-            <button class="side-bar"> CV</button>
+            <button id="buttons" class="side-bar"> Hire Me</button>
+            <button  class="side-bar"> CV</button>
         </div>
     </sub>
     <sub class="two-body">
