--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img class="images" src="images/me.png" alt="">
             
         </div>
-        <div class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quis nisi, sapiente qui blanditiis totam consequatur optio provident nihil molestiae natus adipisci expedita ullam dolores mollitia porro eum, amet consequuntur.</div>
+        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quidem tempora ab minus ducimus. Illo nihil eum debitis totam recusandae repellat expedita, ipsa perspiciatis unde, facere est non, ut necessitatibus!</div>
         
         <div class="side-dom">
             <button id="buttons" class="side-bar"> Hire Me</button>
