--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <button class="button" onclick="scrollToHome()"> Home</button>
             
             <button class="button" onclick="scrollToProjects()">Projects</button>
-            <button class="button" onclick="location.href='https://lilxvg.github.io/contact-me/'"> Contact me</button>
+            <button class="button" onclick="location.href='https://www.youtube.com/'"> Contact me</button>
         </div>
     </div>
     
