--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <button class="button" onclick="scrollToHome()"> Home</button>
             
             <button class="button" onclick="scrollToProjects()">Projects</button>
-            <button class="button" onclick="location.href='lilxvg.github.io/contactme/contact.html'"> Contact me</button>
+            <button class="button" onclick="window.open('https://lilxvg.github.io/contactme/contact.html'); ">Contact</button>
         </div>
     </div>
     
