--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <button class="button" onclick="scrollToHome()"> Home</button>
             
             <button class="button" onclick="scrollToProjects()">Projects</button>
-            <button class="button" onclick="window.location.href='https://lilxvg.github.io/contactInfo/'; ">Contact</button>
+            <button class="button" onclick="window.location.href='https://lilxvg.github.io/contactInfo/contactInfo.html'; ">Contact</button>
         </div>
     </div>
     
