--- a/contactInfo/contactInfo.html
+++ b/contactInfo/contactInfo.html
@@ -19,6 +19,7 @@
                 <button id="ins" class="half-button" onclick="window.location.href='https://www.instagram.com/lilxvg/'"></button>
                 <button id="twt" class="half-button" onclick="window.location.href='https://twitter.com/lilxvg'"></button>
                 <button id="eml" class="half-button" onclick="copyToClipboard()"></button>
+                <div id="copied">Its Copied!!</div>
             </div>
             <div class="links">
                 <a class="User-names" href="https://www.instagram.com/lilxvg/">@LILXVG</a>
